--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "engines":
    {
-    "node": "16.x"
+    "node": "16.13.0"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
