--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "covidproject",
   "version": "0.1.0",
   "private": true,
-  "engines":
-   {
+  "engines": {
     "node": "16.13.0"
   },
   "dependencies": {
@@ -19,13 +18,16 @@
     "react-countup": "^4.3.3",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.2"
+    "react-scripts": "3.4.2",
+    "serve": "^13.0.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start": "serve -s build",
+    "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -42,6 +44,4 @@
       "last 1 safari version"
     ]
   }
-  
 }
-
